# sonic

./: CMakeLists.txt  Makefile  Readme.org  run-experiments.bash
header/: data_generator.h  generic_join.h  helper_functions.h  hypergraph.h  relation.h
header/indices/: abseil_wrapper.h  btree_wrapper.h  hierarchical_hashtable.hpp  htrie_wrapper.h  index_total_order_adapter.h  robin_wrapper.h  sonic_wrapper.h  surf_wrapper.h
header/indices/sonic/: sonic_index.h  sonic_leaf_layer.h  sonic_node_layer.h
src/: BinaryJoin.hpp  ITTNotifySupport.hpp  benchmark_qptree.h  join_benchmark.cpp  join_interface.h  sonic_benchmark.cpp  total_order.py
src/test/: generic_join_test.cpp  join_interfaces.h  qptree-s.h  sonic_test.cpp
